--- a/src/pages/style-guide/_styles.pcss
+++ b/src/pages/style-guide/_styles.pcss
@@ -89,11 +89,10 @@
 
 .desc {
   margin: calc(20rem/var(--f_size)) 0 calc(40rem/var(--f_size));
-  font-weight: var(--f_light);
 }
 
 .link_full_post {
-  font-weight: var(--f_medium);
+  font-weight: var(--f_bold);
 }
 
 .icon {
