--- a/src/assets/styles/grid.scss
+++ b/src/assets/styles/grid.scss
@@ -1,3 +1,5 @@
+@import "vars";
+
 .row {
   display: flex;
   flex-direction: row;
@@ -13,7 +15,7 @@
   }
 }
 
-@media (--w_phone_only) {
+@media ($w_phone_only) {
   .row {
     margin-bottom: 2rem;
   }
