--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/vars.gcss";
+@import "../../assets/styles/vars.scss";
 
 .header {
   position: fixed;
@@ -6,19 +6,19 @@
   left: 0;
   width: 100%;
   background-color: transparent;
-  height: calc(60rem / var(--f_size));
+  height: calc(60rem / #{$f_size});
   transition: all .5s ease-in;
-  z-index: var(--z-layout);
+  z-index: $z-layout;
 
   & > section {
     position: relative;
     max-width: 1600px;
-    margin: calc(20rem / var(--f_size)) auto;
-    padding: 0 calc(100% / var(--f_size));
+    margin: calc(20rem / #{$f_size}) auto;
+    padding: 0 calc(100% / #{$f_size});
   }
 
   &:global(.is_sticky) {
-    background-color: var(--c_thead);
+    background-color: $c_thead;
   }
 }
 
@@ -27,13 +27,13 @@
   position: relative;
   float: left;
   margin-right: 2rem;
-  width: calc(54rem / var(--f_size));
-  height: calc(54rem / var(--f_size));
-  padding: calc(7rem / var(--f_size)) 0 0 calc(8rem / var(--f_size));
+  width: calc(54rem / #{$f_size});
+  height: calc(54rem / #{$f_size});
+  padding: calc(7rem / #{$f_size}) 0 0 calc(8rem / #{$f_size});
   font-family: 'Voltaire', sans-serif;
   text-transform: uppercase;
-  color: var(--c_txt);
-  font-size: calc(26rem / var(--f_size));
+  color: $c_txt;
+  font-size: calc(26rem / #{$f_size});
   text-decoration: none;
 
   &::before,
@@ -42,38 +42,38 @@
     position: absolute;
     top: -2px;
     left: -2px;
-    background: var(--c_txt);
+    background: $c_txt;
   }
 
   &::before {
     height: 2px;
-    width: calc(54rem / var(--f_size));
+    width: calc(54rem / #{$f_size});
     transition: width .3s, background-color .13s linear .25s;
   }
 
   &::after {
     width: 2px;
-    height: calc(54rem / var(--f_size));
+    height: calc(54rem / #{$f_size});
     transition: all .2s;
     transition-delay: .25s;
   }
 
   &:hover {
     &::before {
-      background: var(--c_emph);
-      width: calc(34rem / var(--f_size));
+      background: $c_emph;
+      width: calc(34rem / #{$f_size});
     }
 
     &::after {
-      background: var(--c_emph);
+      background: $c_emph;
     }
   }
 
   & mark {
     display: block;
-    font-size: calc(18rem / var(--f_size));
+    font-size: calc(18rem / #{$f_size});
     background: none;
-    color: var(--c_txt);
+    color: $c_txt;
     white-space: nowrap;
   }
 }
