--- a/src/pages/layout/styles.scss
+++ b/src/pages/layout/styles.scss
@@ -1,17 +1,17 @@
-@import "../../assets/styles/vars.gcss";
+@import "../../assets/styles/vars.scss";
 
 :global(html) {
   @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic');
 }
 
 :global(body) {
-  background-color: var(--c_bg);
+  background-color: $c_bg;
 }
 
 .wrap {
   max-width: 1600px;
   margin: 0 auto;
-  padding: 0 calc(100% / var(--f_size));
+  padding: 0 calc(100% / #{$f_size});
   min-height: 100%;
 
   display: flex;
@@ -19,7 +19,7 @@
   font-family: 'PT Sans', sans-serif;
 
   & > main {
-    padding-top: calc(100rem / var(--f_size));
+    padding-top: calc(100rem / #{$f_size});
     flex: 1 0 auto;
   }
 }
@@ -38,13 +38,13 @@
 
 .footer {
   flex: 0 0 auto;
-  z-index: calc(var(--z-layout) - 1);
-  font-size: calc(12rem/var(--f_size));
-  line-height: calc(60rem/var(--f_size));
+  z-index: calc(#{$z-layout} - 1);
+  font-size: calc(12rem / #{$f_size});
+  line-height: calc(60rem / #{$f_size});
 
   & a {
     margin-right: 20px;
-    color: var(--c_link);
+    color: $c_link;
     text-decoration: none;
   }
 
@@ -53,7 +53,7 @@
   }
 }
 
-@media (--w_phone_only) {
+@media ($w_phone_only) {
   .footer {
     display: none;
   }
