--- a/src/assets/styles/normilize.scss
+++ b/src/assets/styles/normilize.scss
@@ -1,205 +1,207 @@
 @import "./vars.scss";
 
-/*
- * General
- * Headings: h1-h6
- * Text elements: Paragraph, Link
- * Image
- * Lists
- * Table
- * Blockquote
- * Forms
- */
+:global {
+  /*
+   * General
+   * Headings: h1-h6
+   * Text elements: Paragraph, Link
+   * Image
+   * Lists
+   * Table
+   * Blockquote
+   * Forms
+   */
 
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  font-size: 1em;
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  line-height: calc(24rem / #{$f_size});
-  font-family: sans-serif;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  height: 100%;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-*::before, *:after {
-  box-sizing: border-box;
-}
-
-h1, h2, h3, h4, h5, h6, p, blockquote, figure, ol, ul {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: calc(63rem / #{$f_size});
-  line-height: calc(58rem / #{$f_size});
-}
-
-h2 {
-  font-size: calc(48rem / #{$f_size});
-  line-height: calc(48rem / #{$f_size});
-}
-
-h3 {
-  font-size: calc(36rem / #{$f_size});
-  line-height: calc(36rem / #{$f_size});
-}
-
-h4 {
-  font-size: calc(30rem / #{$f_size});
-  line-height: calc(36rem / #{$f_size});
-}
-
-h5 {
-  font-size: calc(20rem / #{$f_size});
-  line-height: calc(24rem / #{$f_size});
-}
-
-h6 {
-  font-size: calc(12rem / #{$f_size});
-  line-height: calc(14rem / #{$f_size});
-}
-
-p {
-  font-size: calc(14rem / #{$f_size});
-  line-height: calc(24rem / #{$f_size});
-}
-
-a {
-  cursor: pointer;
-  transition: .3s;
-  outline: none;
-  color: $c_txt;
-  text-decoration: none;
-
-  &:hover, &:focus {
-    outline: none;
-    color: $c_emph;
+  html {
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1em;
+    height: 100%;
   }
-}
 
-strong {
-  font-weight: bold;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  border: 0;
-}
-
-ol, ul {
-  margin-left: calc(20rem / #{$f_size});
-  list-style-position: inside;
-  font-size: calc(14rem / #{$f_size});
-}
-
-ul {
-  list-style-type: square;
-}
-
-ol li, ul li {
-  line-height: calc(32rem / #{$f_size});
-
-  & ol {
-    margin: calc(30rem / #{$f_size}) 0 calc(30rem / #{$f_size}) calc(30rem / #{$f_size})
+  body {
+    margin: 0;
+    line-height: calc(24rem / #{$f_size});
+    font-family: sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    height: 100%;
   }
-}
 
-table {
-  width: 100%;
-  max-width: 100%;
-  border-collapse: collapse;
-  text-align: left;
-}
+  * {
+    box-sizing: border-box;
+  }
 
-th, td {
-  vertical-align: top;
-}
+  *::before, *:after {
+    box-sizing: border-box;
+  }
 
-blockquote {
-  display: block;
-  font-style: italic;
-}
+  h1, h2, h3, h4, h5, h6, p, blockquote, figure, ol, ul {
+    margin: 0;
+    padding: 0;
+  }
 
-::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
+  main {
+    display: block;
+  }
 
-:focus {
-  outline: 0;
-}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: inherit;
+    text-transform: uppercase;
+  }
 
-button {
-  overflow: visible;
-  border: 0;
-  font: inherit;
-  -webkit-font-smoothing: inherit;
-  letter-spacing: inherit;
-  background: none;
-  cursor: pointer;
-}
-
-audio,
-video {
-  display: inline-block;
-}
-
-/* Add the correct display in iOS 4-7 */
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/* Hide the overflow in IE */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-@media ($w_phone_only) {
   h1 {
-    font-size: calc(53rem / #{$f_size});
-    line-height: calc(50rem / #{$f_size});
+    font-size: calc(63rem / #{$f_size});
+    line-height: calc(58rem / #{$f_size});
   }
 
   h2 {
-    font-size: calc(35rem / #{$f_size});
-    line-height: calc(35rem / #{$f_size});
+    font-size: calc(48rem / #{$f_size});
+    line-height: calc(48rem / #{$f_size});
   }
 
   h3 {
-    font-size: calc(30rem / #{$f_size});
-    line-height: calc(30rem / #{$f_size});
+    font-size: calc(36rem / #{$f_size});
+    line-height: calc(36rem / #{$f_size});
   }
 
   h4 {
-    font-size: calc(28rem / #{$f_size});
-    line-height: calc(30rem / #{$f_size});
+    font-size: calc(30rem / #{$f_size});
+    line-height: calc(36rem / #{$f_size});
+  }
+
+  h5 {
+    font-size: calc(20rem / #{$f_size});
+    line-height: calc(24rem / #{$f_size});
+  }
+
+  h6 {
+    font-size: calc(12rem / #{$f_size});
+    line-height: calc(14rem / #{$f_size});
+  }
+
+  p {
+    font-size: calc(14rem / #{$f_size});
+    line-height: calc(24rem / #{$f_size});
+  }
+
+  a {
+    cursor: pointer;
+    transition: .3s;
+    outline: none;
+    color: $c_txt;
+    text-decoration: none;
+
+    &:hover, &:focus {
+      outline: none;
+      color: $c_emph;
+    }
+  }
+
+  strong {
+    font-weight: bold;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border: 0;
+  }
+
+  ol, ul {
+    margin-left: calc(20rem / #{$f_size});
+    list-style-position: inside;
+    font-size: calc(14rem / #{$f_size});
+  }
+
+  ul {
+    list-style-type: square;
+  }
+
+  ol li, ul li {
+    line-height: calc(32rem / #{$f_size});
+
+    & ol {
+      margin: calc(30rem / #{$f_size}) 0 calc(30rem / #{$f_size}) calc(30rem / #{$f_size})
+    }
+  }
+
+  table {
+    width: 100%;
+    max-width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+  }
+
+  th, td {
+    vertical-align: top;
+  }
+
+  blockquote {
+    display: block;
+    font-style: italic;
+  }
+
+  ::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
+
+  :focus {
+    outline: 0;
+  }
+
+  button {
+    overflow: visible;
+    border: 0;
+    font: inherit;
+    -webkit-font-smoothing: inherit;
+    letter-spacing: inherit;
+    background: none;
+    cursor: pointer;
+  }
+
+  audio,
+  video {
+    display: inline-block;
+  }
+
+  /* Add the correct display in iOS 4-7 */
+  audio:not([controls]) {
+    display: none;
+    height: 0;
+  }
+
+  /* Hide the overflow in IE */
+  svg:not(:root) {
+    overflow: hidden;
+  }
+
+  @media ($w_phone_only) {
+    h1 {
+      font-size: calc(53rem / #{$f_size});
+      line-height: calc(50rem / #{$f_size});
+    }
+
+    h2 {
+      font-size: calc(35rem / #{$f_size});
+      line-height: calc(35rem / #{$f_size});
+    }
+
+    h3 {
+      font-size: calc(30rem / #{$f_size});
+      line-height: calc(30rem / #{$f_size});
+    }
+
+    h4 {
+      font-size: calc(28rem / #{$f_size});
+      line-height: calc(30rem / #{$f_size});
+    }
   }
 }
