setup jest + enzyme

--- a/client/components/layout/styles.scss
+++ b/client/components/layout/styles.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/vars.scss";
+@import "../../assets/styles/vars";
 
 :global(html) {
   @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic');
