fix media queries

--- a/client/assets/styles/normilize.scss
+++ b/client/assets/styles/normilize.scss
@@ -183,7 +183,7 @@
     overflow: hidden;
   }
 
-  @media ($w_phone_only) {
+  @media #{$w_phone_only} {
     h1 {
       font-size: calc(53rem / #{$f_size});
       line-height: calc(50rem / #{$f_size});
